# ChangeLog for dev-libs/libtasn1
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libtasn1/ChangeLog,v 1.33 2006/02/16 15:22:40 vanquirius Exp $

  16 Feb 2006; Marcelo Goes <vanquirius@gentoo.org> libtasn1-0.2.6.ebuild,
  libtasn1-0.2.13.ebuild, libtasn1-0.2.18.ebuild:
  Set RDEPEND to nothing for bug 123002. Thanks to Diego Petteno <flameeyes at
  gentoo dot org>.

  12 Feb 2006; Bryan Østergaard <kloeri@gentoo.org libtasn1-0.2.18.ebuild:
  Stable on alpha + ia64, bug 122307.

  12 Feb 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  libtasn1-0.2.18.ebuild:
  ppc stable, bug #122307

  11 Feb 2006; Markus Rothe <corsair@gentoo.org> libtasn1-0.2.18.ebuild:
  Stable on ppc64: bug #122307

  11 Feb 2006; Fabian Groffen <grobian@gentoo.org> libtasn1-0.2.18.ebuild:
  Marked ppc-macos stable (bug #122307)

  11 Feb 2006; Joshua Jackson <tsunam@gentoo.org> libtasn1-0.2.18.ebuild:
  Stable on x86; security bug #122307

  10 Feb 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  libtasn1-0.2.18.ebuild:
  Stable on sparc wrt security #122307

  10 Feb 2006; Simon Stelling <blubb@gentoo.org> libtasn1-0.2.18.ebuild:
  stable on amd64 wrt bug 122307

  10 Feb 2006; Rene Nussbaumer <killerfox@gentoo.org>
  libtasn1-0.2.18.ebuild:
  Stable on hppa. See bug #122307.

*libtasn1-0.2.18 (09 Feb 2006)

  09 Feb 2006; Marcelo Goes <vanquirius@gentoo.org> +libtasn1-0.2.18.ebuild:
  0.2.18 version bump for bug 122307.

  29 Aug 2005; Lina Pezzella <j4rg0n@gentoo.org> libtasn1-0.2.13.ebuild:
  Stable ppc-macos

  10 Jul 2005; Lina Pezzella <j4rg0n@gentoo.org> libtasn1-0.2.13.ebuild:
  Stable ppc-macos. Bug #98379. Submitted on behalf of Fabian Groffen.

  03 Jul 2005; Hardave Riar <hardave@gentoo.org> libtasn1-0.2.13.ebuild:
  Stable on mips, dep for bug #90726.

  30 Apr 2005; Bryan Østergaard <kloeri@gentoo.org> libtasn1-0.2.13.ebuild:
  Stable on alpha.

  29 Apr 2005; Gustavo Zacarias <gustavoz@gentoo.org>