@@ -1,1 +1,3 @@
 MD5 e44a58746803de101c55ae8683d677a1 libtasn1-0.2.18.tar.gz 904105
+RMD160 41e94706fa6eed989143d9de9d8f53235d8dfd4f libtasn1-0.2.18.tar.gz 904105
+SHA256 2ba2a5faec8ecf05d90e88157ba74b1873e1ee4aa89865c83a955cf3114d0058 libtasn1-0.2.18.tar.gz 904105
