@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libtasn1
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libtasn1/ChangeLog,v 1.33 2006/02/16 15:22:40 vanquirius Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libtasn1/ChangeLog,v 1.34 2006/04/23 13:34:40 flameeyes Exp $
+
+  23 Apr 2006; Diego Pettenò <flameeyes@gentoo.org> libtasn1-0.2.18.ebuild:
+  Run elibtoolize and add ~x86-fbsd keyword.
 
   16 Feb 2006; Marcelo Goes <vanquirius@gentoo.org> libtasn1-0.2.6.ebuild,
   libtasn1-0.2.13.ebuild, libtasn1-0.2.18.ebuild:
